# memento

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: publish.yml
.ouroboros/seeds/: README.yaml  memento-mvp.seed.yaml  memento-v1.seed.yaml  memento-v2.seed.yaml  memento-v3.seed.yaml  memento.seed.yaml  sisyphus-hermes.seed.yaml
docs/: README.md  architecture.md  commands.md  concepts.md  getting-started.md  operators-guide.md  user-guide.md
docs/guide/: installation.md  publishing.md
docs/plans/: 2026-05-13-docs-rewrite-information-architecture.md
scripts/: install-local.sh  verify-local.sh
skills/memento-lifecycle-worker/: SKILL.md
skills/metis-planner/: SKILL.md
skills/momus-reviewer/: SKILL.md
skills/ovrs-evidence-driven-throughput-research/: SKILL.md
skills/sisyphus-ultraworker/: SKILL.md
skills/truthforge-method/: SKILL.md
src/memento/: __init__.py  approvals.py  budget.py  ci.py  cli.py  commands.py  competition.py  context.py  domain.py  events.py  graph_diff.py  graph_planning.py  graphify.py  kanban.py  memory.py  performance_memory.py  plugin.py  recovery.py  repair.py  reporting.py  routing.py  state.py  verification.py  verification_enrichment.py  worker_pool.py  workers.py  worktree.py
src/memento/executors/: __init__.py
src/sisyphus_hermes/: cli.py  commands.py  domain.py  events.py  kanban.py  plugin.py  reporting.py  safety.py  state.py  workers.py
src/sisyphus_hermes/executors/: __init__.py
tests/: __init__.py  test_bootstrap.py  test_cli_sample_smoke.py  test_domain_state_commands.py  test_executor_outbox_lifecycle.py  test_kanban_events_workers.py  test_local_install_readiness.py  test_mvp_lifecycle_foundation.py  test_plugin_registration.py  test_real_adapters.py  test_runtime_quality_contracts.py  test_safety_reporting.py  test_skills_docs.py  test_v1_executor_routing.py  test_v2_learning_graph.py  test_v3_worker_platform.py
