[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sisyphus-hermes"
version = "0.1.0"
description = "Hermes-native Sisyphus durable task lifecycle plugin."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes Agent" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
sisyphus-hermes = "sisyphus_hermes.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sisyphus_hermes"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
