[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memento"
version = "0.1.0"
description = "Hermes-native Memento durable task lifecycle plugin."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes Agent" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
memento = "memento.cli:main"

[project.entry-points."hermes_agent.plugins"]
memento = "memento.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/memento"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
