[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memento-lifecycle"
version = "0.1.0"
description = "Hermes-native lifecycle and evidence ledger for software work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Youngyu Choi" }]
keywords = [
  "ai-agent",
  "evidence",
  "hermes-agent",
  "lifecycle",
  "task-management",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/antchoi/memento"
Repository = "https://github.com/antchoi/memento"
Issues = "https://github.com/antchoi/memento/issues"
Documentation = "https://github.com/antchoi/memento/tree/main/docs"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]
release = [
  "build>=1.2",
  "twine>=5",
]

[project.scripts]
memento = "memento.cli:main"

[project.entry-points."hermes_agent.plugins"]
memento = "memento.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/memento"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
